--- a/_sources/b_coding/fundamentals_of_computer_science/3_Recursion.ipynb
+++ b/_sources/b_coding/fundamentals_of_computer_science/3_Recursion.ipynb
@@ -6,13 +6,15 @@
    "source": [
     "(recursion)=\n",
     "# Recursion\n",
+    "``` {index} Recursion\n",
+    "```\n",
     " \n",
-    "*Recursion* is a method of solving Computer Science problems by considering smaller instances of the same problem. Recursive solutions are usually implemented with functions that call themselves. Consider the example of the fatorial function:"
+    "*Recursion* is a method of solving Computer Science problems by considering smaller instances of the same problem. Recursive solutions are usually implemented with functions that call themselves. Consider the example of the factorial function:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -34,8 +36,7 @@
     "        return 1\n",
     "    else:\n",
     "        return n*fact(n-1)\n",
-    "        \n",
-    "  \n",
+    "          \n",
     "print(fact(1))\n",
     "print(fact(5))"
    ]
@@ -44,11 +45,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Usually, a recursively defined functions has two basic builidng blocks:\n",
+    "Usually, a recursively defined function has two basic building blocks:\n",
     "\n",
     "1) Base case (cases): Which are used for specific (finite) subsets of possible inputs. In the example, this will be when \\\\(n=0\\\\) or \\\\(n=1\\\\). In these cases, the function should not refer to itself.\n",
     "\n",
-    "2) Recursive case (cases): This case builds on the *smaller* version of the same problem. In this case we are decremeting the value of \\\\(n\\\\) befre calling the function again.\n",
+    "2) Recursive case (cases): This case builds on the *smaller* version of the same problem. In this case, we are decrementing the value of \\\\(n\\\\) before calling the function again.\n",
     "\n",
     "The broad idea that recursive cases should assure that the function reaches one of the base cases."
    ]
@@ -59,7 +60,7 @@
    "source": [
     "## Famous examples\n",
     "\n",
-    "* **Greatest common divisior** Probably the most well known recursive algorythm developed by Euclid:"
+    "* **Greatest common divisor** Probably the most well known recursive algorithm developed by Euclid:"
    ]
   },
   {
@@ -91,7 +92,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* **Fibonacci Sequence** To computhe the \\\\(nth\\\\) term of the Fibonacci, we can utilise on of its definitions as in the code below: "
+    "______________\n",
+    "* **Fibonacci Sequence** To compute the \\\\(nth\\\\) term of the Fibonacci, we can utilise one of its definitions as in the code below: "
    ]
   },
   {
@@ -128,14 +130,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**REMARK**: This is a very inefficient solution to the problem. As you can spot, each `fib` call leads to two `fib` calls (unless it reaches a base case). This solution is of \\\\(O(2^n)\\\\), which is very slow. "
+    "**REMARK**: This is a very inefficient solution. As you can spot, each `fib` call leads to two `fib` calls (unless it reaches a base case). This solution is of \\\\(O(2^n)\\\\), which is very slow. We can use [Dynamic Programming](LINK) to speed it up."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* **Towers of Hanoi** In this problem we are have three rods and a number of disks of different sizes. Our aim is to move all disks from one rod to another using the third rod. The following rules apply:\n",
+    "-------------------\n",
+    "* **Towers of Hanoi** In this problem, we have three rods and some disks of different sizes. Our aim is to move all disks from one rod to another using the third rod. The following rules apply:\n",
     "\n",
     "1) Only one disk can be moved at a time.\n",
     "\n",
@@ -147,13 +150,13 @@
     "\n",
     "Source: [Wikimedia Commons](https://upload.wikimedia.org/wikipedia/commons/8/8d/Iterative_algorithm_solving_a_6_disks_Tower_of_Hanoi.gif)\n",
     "\n",
-    "The solution is likely one of the most beutiful recursive procedures:\n",
+    "The solution is likely one of the most beautiful recursive procedures:\n",
     "\n",
     "We are starting with \\\\(n\\\\) disks on the **source** rod and want to move them to the **target** rod, with the help of the **spare** rod. The procedure is as follows:\n",
     "\n",
     "Base Case:\n",
     "\n",
-    "\n",
+    "1) There are zero disks, do nothing.\n",
     "\n",
     "Recursive case:\n",
     "\n",
@@ -161,7 +164,7 @@
     "\n",
     "2) Move the \\\\(n\\\\) disk from the **source** to the **target**.\n",
     "\n",
-    "3) Move \\\\(n-1\\\\) disks from **spare** to the **source** by the *main sovling procedure*.\n",
+    "3) Move \\\\(n-1\\\\) disks from **spare** to the **source** by the *main solving procedure*.\n",
     "\n",
     "The code is as follows:"
    ]
@@ -265,9 +268,9 @@
    "source": [
     "## Recursive Data Structures\n",
     "\n",
-    "Apart from the algorytms themselves, we can structure (or interpret) our data in a recursive way. Any time we can reduce an instance of the data structure to the same but somehow smaller, we can talk about a *recursively defined datastructures*. It turns out that many structures can be defined this way:\n",
+    "Apart from the algorithms themselves, we can structure (or interpret) our data in a recursive way. Any time we can reduce an instance of the data structure to the same but somehow smaller, we can talk about a *recursively defined data structures*. It turns out that many structures can be defined this way:\n",
     "\n",
-    "* **Lists** can be thought of as a single element (*head*) followed by a tail (*again a list*). Base case is an empty listy"
+    "* **Lists** can be thought of as a single element (*head*) followed by a tail (*again a list*). The base case is an empty list."
    ]
   },
   {
@@ -313,9 +316,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Where the `copy.deepcopy` returns a copy of the list. When defined this way, the list constist of a leading element and a list one-smaller than the parent list.\n",
+    "Where the `copy.deepcopy` returns a copy of the list. When defined this way, the list consists of a leading element and a list one-smaller than the parent list.\n",
     "\n",
-    "We can now use this definition to sum up the elements of an integer list (with standard Python list interpertation):"
+    "We can now use this definition to sum up the elements of an integer list (with standard Python list implementation):"
    ]
   },
   {
@@ -348,11 +351,148 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* **Binary Trees**"
+    "-------------\n",
+    "* **Binary Trees** are types of graphs that do not have cycles and each node has at most two children and exactly one parent. They are self-similar as both of the subtrees of such binary tree are also trees. This is a characteristic feature of recursive data structures.\n",
+    "\n",
+    "```{figure} algo_images/BinaryTree.png\n",
+    ":width: 80%\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(recursion_exercises)=\n",
+    "## Exercises\n",
+    "* **Length of an array** Based on the `array_sum` function, define a recursive function which counts the number of elements in an array."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "````{admonition} Answer\n",
+    ":class: dropdown\n",
+    "```python\n",
+    "def array_len(a):\n",
+    "    if a == []:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return 1 + array_len(a[1:])     \n",
+    "```\n",
+    " \n",
+    "````"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "------------------\n",
+    "* **Babylonian Square Roots** A method to find an approximation of a square root of a number \\\\(S\\\\) is to pick a guess \\\\(x_0\\\\) and iteratively improve the guess by applying the formula \\\\(x_1 = (x_0 + S/x_0)\\\\). In the limit, this will give a square root. Unfortunately, we do not have time for an infinite number of operations, so return \\\\(x_1\\\\) when the condition is satisfied:\n",
+    "\n",
+    "\\\\[\\frac{|x_1-x_0|}{x_1} < 0.01\\\\]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "````{admonition} Answer\n",
+    ":class: dropdown\n",
+    "```python\n",
+    "def babSqrtHelper(S, x_0, x_1):\n",
+    "    if abs(x_1-x_0)/x_1 < 0.01:\n",
+    "        return x_1\n",
+    "    else:\n",
+    "        return babSqrtHelper(S,x_1,(x_1+S/x_1)/2)\n",
+    "\n",
+    "def babSqrt(S):\n",
+    "    x_0 = S\n",
+    "    x_1 = (x_0 + S/x_0)/2\n",
+    "    return babSqrtHelper(S, x_0, x_1)\n",
+    "\n",
+    "print(babSqrt(1))\n",
+    "print(babSqrt(2))\n",
+    "print(babSqrt(3))\n",
+    "print(babSqrt(4))    \n",
+    "```\n",
+    " \n",
+    "````"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--------------\n",
+    "* **Design** a `BinaryTree` data structure. Each node should have a left and right child fields as well as a value inside the node. Define also two other methods:\n",
+    "\n",
+    "1) Insert: inserts value into the tree if the element is greater than its parent it goes to the right subtree if smaller - to the left one. Finally, if the element is already in the tree, do not add it and inform the user about it.\n",
+    "\n",
+    "2) Search: search if the element is in the list."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "````{admonition} Answer\n",
+    ":class: dropdown\n",
+    "```python\n",
+    "class BinaryTree:\n",
+    "    def __init__(self):\n",
+    "        self.left = None\n",
+    "        self.right = None\n",
+    "        self.val = None\n",
+    "\n",
+    "    def insert(self,val):\n",
+    "        if self.val is None:\n",
+    "            self.val = val\n",
+    "        elif self.val == val:\n",
+    "            print(\"Value already in the tree!\")\n",
+    "        elif self.val < val:\n",
+    "            if self.right is None:\n",
+    "                self.right = BinaryTree()\n",
+    "            self.right.insert(val)\n",
+    "        else:\n",
+    "            if self.left is None:\n",
+    "                self.left = BinaryTree()\n",
+    "            self.left.insert(val)\n",
+    "\n",
+    "\n",
+    "    def search(self,val):\n",
+    "        if self.val is None:\n",
+    "            return False\n",
+    "        elif self.val < val:\n",
+    "            if self.right is None:\n",
+    "                return False\n",
+    "            return self.right.search(val)\n",
+    "        elif self.val > val:\n",
+    "            if self.left is None:\n",
+    "                return False\n",
+    "            return self.left.search(val)\n",
+    "        else:\n",
+    "            return True\n",
+    "            \n",
+    "        \n",
+    "root = BinaryTree()\n",
+    "root.insert(1)\n",
+    "root.insert(2)  \n",
+    "root.insert(3) \n",
+    "print(root.search(1))  \n",
+    "print(root.search(0))   \n",
+    "             \n",
+    "```\n",
+    " \n",
+    "````\n"
    ]
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
