--- a/notebooks/e_extra/contributors_guide.ipynb
+++ b/notebooks/e_extra/contributors_guide.ipynb
@@ -450,10 +450,17 @@
     "Some text and we want some code, then `code` goes into here.\n",
     "```\n",
     "\n",
-    "## Inserting code outpyts into page content\n",
+    "## Inserting code outputs into page content\n",
     "\n",
     "[Jupyter Book website](https://jupyterbook.org/content/glue.html?highlight=gluing) provides an excellent guide on how to `glue` outputs of your code into the Markdown syntax."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
