--- a/_sources/b_coding/Fundamentals of Computer Science/1_Algorythmic_Complexity.ipynb
+++ b/_sources/b_coding/Fundamentals of Computer Science/1_Algorythmic_Complexity.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "## Big O notation\n",
     "\n",
-    "The mathematical definiton of this concept can be found {doc}`here </c_mathematics/mathematical_notation/Big_O_notation>`. In simple terms, we say that:\n",
+    "The mathematical definiton of this concept can be found [here](https://primer-computational-mathematics.github.io/book/c_mathematics/mathematical_notation/Big_O_notation.html). In simple terms, we say that:\n",
     "\n",
     "\\\\[f(n) = O(g(n))\\\\] \n",
     "\n",
