--- a/_sources/b_coding/Fundamentals of Computer Science/2_Recursion.ipynb
+++ b/_sources/b_coding/Fundamentals of Computer Science/2_Recursion.ipynb
@@ -489,6 +489,14 @@
     " \n",
     "````\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## References\n",
+    "* Sebastian Raschka, GitHub, [Algorithms in IPython Notebooks]( https://github.com/rasbt/algorithms_in_ipython_notebooks)"
+   ]
   }
  ],
  "metadata": {
