--- a/notebooks/d_geosciences/Fluid_Dynamics/Lecture7_Pipe_Flow_with_Heat.ipynb
+++ b/notebooks/d_geosciences/Fluid_Dynamics/Lecture7_Pipe_Flow_with_Heat.ipynb
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -362,6 +362,34 @@
     "ax.set_title('Channel Flow Temperature Profile')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then, we can work out the wall heat flux ($q_x$ at $y=d/2$)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$q_{x}=-k\\frac{\\delta T}{\\delta y}=\\frac{C_1 k d^3}{24\\kappa \\mu}$$(equation18)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And heat transfer coefficient $h$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
