--- a/notebooks/b_coding/Fundamentals of Computer Science/3_Divide_and_Conquer.ipynb
+++ b/notebooks/b_coding/Fundamentals of Computer Science/3_Divide_and_Conquer.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let us consider the time complexity of this solution.\n"
+    "Now, let us consider the time complexity of this solution. On the merge of the two halves of the initial list we are performing roughly \\\\(n\\\\) operations. Then, merge of the halves was a result of \\\\(2*n/2\\\\) operations. The pattern is as follows:\n",
+    "\n",
+    "\\\\[n+\\frac{n}{2}\\times2 + \\frac{n}{4}\\times4 + \\frac{n}{8}\\times8 +... = nlog(n)\\\\]\n",
+    "\n",
+    "So this algorithm is \\\\(O(nlog(n)\\\\). This is a considerable improvement compared to the Selection Sort."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(divide_and_conquer_exercises)=\n",
+    "## Exercises\n",
+    "\n"
    ]
   }
  ],
