--- a/_sources/b_coding/Fundamentals of Computer Science/1_Algorythmic_Complexity.ipynb
+++ b/_sources/b_coding/Fundamentals of Computer Science/1_Algorythmic_Complexity.ipynb
@@ -536,7 +536,7 @@
    "metadata": {},
    "source": [
     "-------\n",
-    "## References:\n",
+    "## References\n",
     "\n",
     "* Victor S.Adamchik, CMU, 2009 [Algorythmic Complexity](https://www.cs.cmu.edu/~adamchik/15-121/lectures/Algorithmic%20Complexity/complexity.html)\n",
     "\n",
