--- a/notebooks/d_geosciences/Fluid_Dynamics/Lecture7_Pipe_Flow_with_Heat.ipynb
+++ b/notebooks/d_geosciences/Fluid_Dynamics/Lecture7_Pipe_Flow_with_Heat.ipynb
@@ -381,15 +381,85 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And heat transfer coefficient $h$"
+    "The heat flux is thus a constant, independent of $y$. If $C_1$ is positive, the\n",
+    "wall temperature increases in the direction of flow, and heat flows through\n",
+    "the wall of the pipe into the fluid. If $C_1$ is negative, the wall temperature\n",
+    "decreases in the direction of flow, and heat flows out of the fluid into the\n",
+    "wall of the pipe. The heat flux to the wall can be expressed in a convenient\n",
+    "way by introducing a heat transfer coefficient $h$ between the wall heat flux\n",
+    "and the excess fluid temperature according to"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "$$q_{x}=h(\\bar{T}-T_w)=h\\bar{\\theta}$$(equation19) where the overbar represents an average over the cross section of the channel."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The average is weighted by the flow per unit area, that is, the velocity through $dy$ in 2D. Thus the flow-weighted average excess\n",
+    "fluid temperature is"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\bar{\\theta}=\\frac{1}{d\\bar{u}}\\int^{d/2}_{-d/2}\\theta u dy$$(equation20) where the result can be obtained from WolframAlpha."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$h=\\frac{q_x}{\\bar{\\theta}}=\\frac{70k}{17d}$$ (equation21)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that the {eq}`equation21` is valid only for Reynolds numbers less than about 2200. At higher values of the Reynolds number the flow is turbulent."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The fluid mechanics literature commonly introduces a dimensionless measure of the heat transfer coefficient known as the Nusselt number $Nu$. For pipe flow with heat addition,"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$Nu=\\frac{hd}{k}=\\frac{\\frac{70k}{d}d}{k}$$(equation22)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Nusselt number measures the efficiency of the heat transfer process. If the temperature difference $\\bar{T} −T_w$ were established across a stationary layer of fluid of thickness $D$ and thermal conductivity $k$, the conductive heat flux $q_c$ would be"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$q_{c}=\\frac{k(\\bar{T}-T_w)}{D}$$(equation23)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Thus the Nusselt number can be written as"
+   ]
   },
   {
    "cell_type": "code",
