--- a/notebooks/b_coding/Fundamentals of Computer Science/3_Divide_and_Conquer.ipynb
+++ b/notebooks/b_coding/Fundamentals of Computer Science/3_Divide_and_Conquer.ipynb
@@ -285,15 +285,88 @@
     "(divide_and_conquer_exercises)=\n",
     "## Exercises\n",
     "\n",
-    "* ** **\n",
+    "* **Rotated Binary Search** You are given a sorted list `arr` which was rotated, which means that the elements were moved from index `i` to index `(i+n)%len(arr)` where `n` is the amount of rotation. The example is:\n",
     "\n",
-    "* **Quick Sort**\n",
-    "\n"
+    "`[1,2,3,4,5,6] -> [5,6,1,2,3,4]` is a rotation by 2.\n",
+    "\n",
+    "Design an algorithm which finds the smallest element in \\\\(O(log(n)\\\\).\n",
+    "\n",
+    "**HINT**: The elements on the sides of the smallest element are both greater than it."
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+      "1 [2, 3, 4, 5, 6, 7, 8, 9, 10, 1]\n",
+      "1 [3, 4, 5, 6, 7, 8, 9, 10, 1, 2]\n",
+      "1 [4, 5, 6, 7, 8, 9, 10, 1, 2, 3]\n",
+      "1 [5, 6, 7, 8, 9, 10, 1, 2, 3, 4]\n",
+      "1 [6, 7, 8, 9, 10, 1, 2, 3, 4, 5]\n",
+      "1 [7, 8, 9, 10, 1, 2, 3, 4, 5, 6]\n",
+      "1 [8, 9, 10, 1, 2, 3, 4, 5, 6, 7]\n",
+      "1 [9, 10, 1, 2, 3, 4, 5, 6, 7, 8]\n",
+      "1 [10, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "1 [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+      "1 [2, 3, 4, 5, 6, 7, 8, 9, 10, 1]\n",
+      "1 [3, 4, 5, 6, 7, 8, 9, 10, 1, 2]\n",
+      "1 [4, 5, 6, 7, 8, 9, 10, 1, 2, 3]\n",
+      "1 [5, 6, 7, 8, 9, 10, 1, 2, 3, 4]\n",
+      "1 [6, 7, 8, 9, 10, 1, 2, 3, 4, 5]\n",
+      "1 [7, 8, 9, 10, 1, 2, 3, 4, 5, 6]\n",
+      "1 [8, 9, 10, 1, 2, 3, 4, 5, 6, 7]\n",
+      "1 [9, 10, 1, 2, 3, 4, 5, 6, 7, 8]\n",
+      "1 [10, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "```{admonition} Answer\n",
+    ":class: dropdown\n",
+    "        \n",
+    "# arr is sorted and rotated\n",
+    "def binaryRotated(arr, low, high):\n",
+    "    #base case\n",
+    "    if len(arr[low:high+1]) <= 3:\n",
+    "        min_val = arr[low]\n",
+    "        for i in arr[low:high+1]:\n",
+    "            if i < min_val:\n",
+    "                min_val = i  \n",
+    "        return min_val\n",
+    "    \n",
+    "    mid = (low + high) // 2\n",
+    "    \n",
+    "    #minimum found\n",
+    "    if arr[mid-1] > arr[mid] and arr[mid+1] > arr[mid]:\n",
+    "        return arr[mid]\n",
+    "    #recursive cases\n",
+    "    elif arr[mid] > arr[0] and arr[mid] > arr[-1]:\n",
+    "        return binaryRotated(arr, mid,high)\n",
+    "    else:\n",
+    "        return binaryRotated(arr,low,mid-1)\n",
+    "\n",
+    "\n",
+    "# test the function\n",
+    "arr = [1,2,3,4,5,6,7,8,9,10]    \n",
+    "for i in range(2*len(arr)):\n",
+    "    test = []\n",
+    "    for j in range(len(arr)):\n",
+    "        test.append(arr[(j+i) % len(arr)])\n",
+    "    #print(binaryRotated(test,0,len(arr)), test)\n",
+    "    assert min(arr) == binaryRotated(test,0,len(arr))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
