deploy: 8902badad48d7afd65455f08648a9427d70246da

--- a/_sources/d_geosciences/Fluid_Dynamics/Lecture7_Pipe_Flow_with_Heat.ipynb
+++ b/_sources/d_geosciences/Fluid_Dynamics/Lecture7_Pipe_Flow_with_Heat.ipynb
@@ -451,22 +451,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$q_{c}=\\frac{k(\\bar{T}-T_w)}{D}$$(equation23)"
+    "$$q_{c}=\\frac{k(\\bar{T}-T_w)}{d}$$(equation23)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Thus the Nusselt number can be written as"
+    "Thus the Nusselt number can be written as the ratio of convective to conductive heat transfer at a boundary in a fluid."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "$$Nu=\\frac{q_x}{q_c}$$(equation24)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problem 6.28"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The results of this section were based on the assumption of a laminar heat transfer coefficient for the aquifer flow. Because this requires\n",
+    "$Re < 2200$, what limitation is placed on the Peclet number?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Peclet number is a dimensionless measure of the mean velocity of the flow through the aquifer. It is related to the dimensionless parameters $Re$ and $Pr$ already introduced. Since the thermal diffusivity $\\kappa$ is $k/\\rho c$, $Pe$ can be written as"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$Pe=\\frac{\\rho c \\bar{u}R}{k}=\\frac{\\bar{u}R}{\\kappa}$$(equation25)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If the flow is turbulent, then the mean velocity of the fluid is likely to be reduced because some streams would be flowing in the opposite direction as the other streams. Therefore, the $Pe$ number would be low in reality but high in calculations."
+   ]
   }
  ],
  "metadata": {
