--- a/_sources/b_coding/Fundamentals of Computer Science/3_Divide_and_Conquer.ipynb
+++ b/_sources/b_coding/Fundamentals of Computer Science/3_Divide_and_Conquer.ipynb
@@ -285,15 +285,120 @@
     "(divide_and_conquer_exercises)=\n",
     "## Exercises\n",
     "\n",
-    "* ** **\n",
+    "* **Rotated Binary Search** You are given a sorted list `arr` which was rotated, which means that the elements were moved from index `i` to index `(i+n)%len(arr)` where `n` is the amount of rotation. The example is:\n",
     "\n",
-    "* **Quick Sort**\n",
-    "\n"
+    "`[1,2,3,4,5,6] -> [5,6,1,2,3,4]` is a rotation by 2.\n",
+    "\n",
+    "Design an algorithm which finds the smallest element in \\\\(O(log(n))\\\\).\n",
+    "\n",
+    "**HINT**: The elements on the sides of the smallest element are both greater than it."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "````{admonition} Answer\n",
+    ":class: dropdown\n",
+    "```python        \n",
+    "# arr is sorted and rotated\n",
+    "def binaryRotated(arr, low, high):\n",
+    "    #base case\n",
+    "    if len(arr[low:high+1]) <= 3:\n",
+    "        min_val = arr[low]\n",
+    "        for i in arr[low:high+1]:\n",
+    "            if i < min_val:\n",
+    "                min_val = i  \n",
+    "        return min_val\n",
+    "    \n",
+    "    mid = (low + high) // 2\n",
+    "    \n",
+    "    #minimum found\n",
+    "    if arr[mid-1] > arr[mid] and arr[mid+1] > arr[mid]:\n",
+    "        return arr[mid]\n",
+    "    #recursive cases\n",
+    "    elif arr[mid] > arr[0] and arr[mid] > arr[-1]:\n",
+    "        return binaryRotated(arr, mid,high)\n",
+    "    else:\n",
+    "        return binaryRotated(arr,low,mid-1)\n",
+    "\n",
+    "\n",
+    "# test the function\n",
+    "arr = [1,2,3,4,5,6,7,8,9,10]    \n",
+    "for i in range(2*len(arr)):\n",
+    "    test = []\n",
+    "    for j in range(len(arr)):\n",
+    "        test.append(arr[(j+i) % len(arr)])\n",
+    "    #print(binaryRotated(test,0,len(arr)), test)\n",
+    "    assert min(arr) == binaryRotated(test,0,len(arr))\n",
+    "```\n",
+    "````"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-------------\n",
+    "* **Quick Sort** is probably the most widely used sorting algorithm in the world. In the worst case it runs in \\\\(O(n^2)\\\\), but on average it is \\\\(O(nlogn)\\\\) with smaller constants than Merge Sort. The idea is as following:\n",
+    "\n",
+    "Base case:\n",
+    "1) List of length 1 is sorted, return\n",
+    "\n",
+    "Recursive case:\n",
+    "\n",
+    "1) Pick an element in the array (a pivot) and put the elemens greater than the pivot in the left part of the array (or its copy for an easier implementation) and greater elements in the right side of the array. Finally insert the pivot in between. It is now in the place it should be **in the sorted array**.\n",
+    "\n",
+    "2) Call `QuickSort` on the subarray in the right of the pivot and on the subarray on the right of the pivot. The returned arrays will be sorted\n",
+    "\n",
+    "Based on the above description, define a function `QuickSort`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "````{admonition} Answer\n",
+    ":class: dropdown\n",
+    "```python        \n",
+    "def QuickSort(arr):\n",
+    "    #base case\n",
+    "    if len(arr) == 1:\n",
+    "        return arr\n",
+    "    else:\n",
+    "        # setting the variables\n",
+    "        mid = len(arr) // 2\n",
+    "        pivot = arr[mid]\n",
+    "        left_border = 0\n",
+    "        right_border = len(arr) - 1\n",
+    "        copy = [0] * len(arr)\n",
+    "        \n",
+    "        #partitioning the array\n",
+    "        for i in range(len(arr)):\n",
+    "            if i != mid:\n",
+    "                if arr[i] <= pivot:\n",
+    "                    copy[left_border] = arr[i]\n",
+    "                    left_border += 1\n",
+    "                else:\n",
+    "                    copy[right_border] = arr[i]\n",
+    "                    right_border -= 1\n",
+    "        copy[left_border] = pivot\n",
+    "        \n",
+    "        #recursive calls\n",
+    "        if left_border > 0:\n",
+    "            copy[:left_border] = QuickSort(copy[:left_border])\n",
+    "        if right_border < len(arr) - 1:\n",
+    "            copy[right_border:] = QuickSort(copy[right_border:])\n",
+    "        return copy\n",
+    "```\n",
+    "````"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
