--- a/_sources/b_coding/Fundamentals of Computer Science/2_Recursion.ipynb
+++ b/_sources/b_coding/Fundamentals of Computer Science/2_Recursion.ipynb
@@ -495,7 +495,8 @@
    "metadata": {},
    "source": [
     "## References\n",
-    "* Sebastian Raschka, GitHub, [Algorithms in IPython Notebooks]( https://github.com/rasbt/algorithms_in_ipython_notebooks)"
+    "* Sebastian Raschka, GitHub, [Algorithms in IPython Notebooks]( https://github.com/rasbt/algorithms_in_ipython_notebooks)\n",
+    "* Cormen, Leiserson, Rivest, Stein, \"Introduction to Algorithms\", Third Edition, MIT Press, 2009"
    ]
   }
  ],
