Clarified confusion with classes without init

--- a/notebooks/b_coding/Intro to Python/17_Matplotlib.ipynb
+++ b/notebooks/b_coding/Intro to Python/17_Matplotlib.ipynb
@@ -278,7 +278,7 @@
    "source": [
     "(Animations)=\n",
     "### Animations\n",
-    "``` {index} Plots: Animation\n",
+    "``` {index} Plots: Animations\n",
     "```"
    ]
   },
