--- a/notebooks/b_coding/Intro to Python/19_Classes.ipynb
+++ b/notebooks/b_coding/Intro to Python/19_Classes.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "A very popular concept in Computer Science is *an object*. Objects are theoretical entities that may contain data (*fields*) as well as specific functionalities (*methods*). Classes in Python provide a means of implementing *types* objects. \n",
     "\n",
-    "Oof... that is a lot of abstract terminologies. Let us have a look at an example:"
+    "Oof... that is a lot of abstract terminology. Let us have a look at an example:"
    ]
   },
   {
@@ -169,12 +169,12 @@
    "source": [
     "## Classes without `__init__`\n",
     "\n",
-    "Classes without the `__init__` method cannot produce objects, they cannot be instantiated. They can still provide functionality, however. On a basic level, they can be treated as our own library:"
+    "Classes without the `__init__` method cannot produce objects, they cannot be instantiated. They can still provide functionality, however. On a basic level, they can be treated as our own library. Notice that there is no `self` argument in the methods of such class:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -187,6 +187,7 @@
     }
    ],
    "source": [
+    "#regular class\n",
     "class ComplexNum():\n",
     "    def __init__(self, real, im):\n",
     "        self.real = real\n",
@@ -195,7 +196,7 @@
     "    def __str__(self):\n",
     "        return str(self.real) +\" + \" + str(self.im)+\"i\"\n",
     "        \n",
-    "\n",
+    "#without __init__\n",
     "class ComplexMath():\n",
     "    \n",
     "    def add(com1,com2):\n",
