--- a/notebooks/b_coding/Fundamentals of Computer Science/4_Dynamic_Programming.ipynb
+++ b/notebooks/b_coding/Fundamentals of Computer Science/4_Dynamic_Programming.ipynb
@@ -1,11 +1,14 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "(dynamic_programming)=\n",
+    "# Dynamic Programming\n",
+    "``` {index} Dynamic Programming\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
